--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -13,39 +13,35 @@ Thanks for your visit!
 
 <br/>
 
-I've started this website to share thoughts on subjects such as: 
+I've started this website to share thoughts and inspiring ideas about:
 
 - web development
 - cloud architecture
-- devops techniques
+- DevOps techniques
 - software design
 - remote work
 - startups
 
 ### A walk down Memory Lane
 
-I've been interested in computers since I can remember; Starting to code as a hobbie when I was 14 years old in Visual Basic 4. I wrote a useful program for my dad once with Visual Basic and SQLServer, a static website hosted in Geocities, a space invaders like game, an assembler program that freezed my computer, and other silly apps whose code would get me fired if I ever write a program like that in these days.  
-I used to hang out with a friend of mine to learn coding together during endless nights, and was a member of UYLUG ( Uruguay Linux users group ).  
-I quickly felt in love with open source technologies and after a few weeks I was able to install my first Linux distro; Red Hat 4.2. I was 16 at that moment, and by then I dreamed about being a hacker. 
-But I was only able to hack my high school teacher's password, besides doing silly tricks with an archaic Motorola phone.  
-At 18 I thought I needed to widen my point of view about life, so I made the decision to study psychology. A few years later I decided to get back into software development cause I just can't help it; I love to write software, and the creative thinking required to build simple solutions to complex problems.  
+I've been interested in computers since I can remember; Starting to code as a hobby when I was 14 years old.  
+I wrote a useful program for my dad with Visual Basic 4 and Microsoft SQLServer, a Geocities website full of GIFs, a few simple games, an assembler program that froze my computer, and a lot of simple programs.
+Soon after that, I found out about something called "open-source" and quickly fell in love with the idea.  
+Once, after 2 weeks of failed attempts, I was able to install my first Linux distro. It was Red Hat 4.2, and I was 16. 
+By then I dreamed about being a hacker. I loved to learn about Linux, white-hat hacking, and read stories about Captain Crunch, Dennis Ritchie, Ken Thompson, Linus Torvalds, and other heroes of the cyberpunk culture.
+At 18 I thought I needed to widen my point of view about life, so I decided to study psychology at the university. 
+But after a few years of coursing those studies, I came back into software development cause I just can't help it; I love to write software, and the creative thinking required to build simple solutions to complex problems.  
 
 ### I am basically, but not exclusively
 
-- a software architect
-- a full stack developer
-- a CS student drop-out
-- a psychology student drop-out
 - an avid learner
+- a software architect
+- a full-stack developer
 - a parent
 - a husband
 - an amateur runner
-- a very amateur musician
+- and a very amateur musician
 
-### Wanna talk about software development?
+### Wanna talk about something?
 
-You can start a conversation by clicking below.
-
-<br/>
-
-<ContactLink />
+You can write to me at <ContactLink />
