--- a/blog/src/data/pages/business.mdx
+++ b/blog/src/data/pages/business.mdx
@@ -5,12 +5,12 @@ publish: true
 ---
 import ContactLink from "components/contact-link"
 
-**Time to market** and superb **execution** are key for a tech startup to succed on a competitive world.  
-An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their development and operations teams if they share the right mindset, understand the business, and collaborate together thowards global goals.  
+**Time to market** and superb **execution** are key for a tech startup to succeed in a competitive world.  
+An organization's ability to learn from mistakes and pivot quickly enough, can be enabled by their development and operations teams if they share the right mindset, understand the business, and collaborate toward global goals.  
 
 <br/>
 
-As a human oriented full stack developer, inspired by devops principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, automatization of existing workflows, and designing new software development processes.
+As a human-oriented full-stack developer, inspired by DevOps principles, I work closely with remote teams to help organizations improve their streams of value, delivering **high-quality software** through thoughtful planning, design and implementation of new features, refactor of legacy codebases, automatization of existing workflows, and designing new software development processes.
 
 <br/>
 
@@ -22,7 +22,6 @@ I have an academic background in computer science and psychology, +13 years of w
 
 ### Let's talk
 
-If you are looking for a proficient **full-stack developer**, knowleadgable on **devops** techniques, and a **team player** who cares about people and technical culture, write me an email. I would love to know about your project.  
-<br/>
-<br/>
-<ContactLink />
+If you are looking for a proficient **full-stack developer**, knowledgeable on **DevOps** techniques, and a **team player** who cares about people and technical culture, write me an email to <ContactLink />. 
+I would love to know about your project.  
+
