tutorial - changes to intro

--- a/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
+++ b/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
@@ -20,10 +20,10 @@ import "prismjs/components/prism-json"
 
 ### Intro
 
-In these days, It's still usual to see many startups, performing manual setup of development environments. 
+In these days, it's quite usual to see startups, performing manual setup of development environments. 
 The results are often a fragile mix of operating systems, libraries, and language versions. 
-Other times, development environments are maintained by experienced IT teams, 
-who fiercely protect their infrastructure. Affecting the ability of dev teams, to understand the underlying infrastructure, or try new ideas.  
+On other occasions,  experienced IT teams are responsible for building these environments, protecting them from inexperienced developers.  
+As a side effect, development teams experience blockers, to understand the underlying infrastructure, or try new ideas.
 In those scenarios, evolving internal development practices it's impractical and discouraged.
 
 <br/>
